--- a/app/src/main/res/layout/new_app_widget.xml
+++ b/app/src/main/res/layout/new_app_widget.xml
@@ -4,57 +4,12 @@
     android:background="#09C"
     android:padding="@dimen/widget_margin">
 
-    <LinearLayout
-        android:id="@+id/section_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal"
-        style="@style/AppWidgetSection">
-
-        <TextView
-            android:id="@+id/appwidget_id_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:text="Battery"
-            style="@style/AppWidgetLabel"/>
-        <TextView
-            android:id="@+id/appwidget_id"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="%"
-            style="@style/AppWidgetText"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/section_update"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/section_id"
-        android:orientation="vertical"
-        style="@style/AppWidgetSection">
-        <TextView
-            android:id="@+id/appwidget_update_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Last Updated"
-            style="@style/AppWidgetLabel"/>
-        <TextView
-            android:id="@+id/appwidget_update"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/date_count_format"
-            style="@style/AppWidgetText"/>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/appwidget_id"
+        style="@style/AppWidgetText"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:text="%" />
 
     <!-- Update widget button -->
 </RelativeLayout>
