--- a/app/src/main/res/layout/battery_widget.xml
+++ b/app/src/main/res/layout/battery_widget.xml
@@ -4,7 +4,7 @@ android:layout_width="match_parent"
 android:layout_height="match_parent">
 
 <TextView
-    android:id="@+id/appwidget_id"
+    android:id="@+id/battery_pct"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
