--- a/app/src/main/res/xml/battery_widget_info.xml
+++ b/app/src/main/res/xml/battery_widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/new_app_widget"
-    android:initialLayout="@layout/new_app_widget"
+    android:initialKeyguardLayout="@layout/battery_widget"
+    android:initialLayout="@layout/battery_widget"
     android:minWidth="40dp"
     android:minHeight="40dp"
     android:resizeMode="horizontal|vertical"
